Add more flexible query language for anagrammer